[package]
name = "create-ronin"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
dialoguer = "0.10"
tar = "0.4"
zip = "0.6"
flate2 = "1.0"
indicatif = "0.17"
